--- a/QA/QA-11-module/src/partials/gallery.html
+++ b/QA/QA-11-module/src/partials/gallery.html
@@ -5,6 +5,6 @@
       <button type="submit" class="search-btn">search</button>
     </form>
     <ul class="gallery js-gallery list"></ul>
-    <div class="target-element"></div>
+    <div class="js-target-element"></div>
   </div>
 </section>
